# ignoreme

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  added.h  cmake_install.cmake  compile_commands.json  litGeom.frag  litGeom.vert  main - Copy.cpp  main.cpp
glad/: glad.c  glad.h
imgui/: imgui_demo.cpp
include/: GUIDirectoryBrowser.cpp  GUIDirectoryBrowser.hpp  GUIFileBrowser.cpp  GUIFileBrowser.hpp  GUILauncher.cpp  GUILauncher.hpp  GUIMessageDlg.cpp  GUIMessageDlg.hpp  GUIShaderEdit.cpp  GUIShaderEdit.hpp  GUITestbed.cpp  GUITestbed.hpp  editorgui.hpp  geosphere.h  glres.cpp  glres.hpp  glshader.cpp  glshader.hpp  glutils.hpp  platform.cpp  platform.hpp  programwrap.hpp  shaderwrap.hpp  staticgeom.hpp  triangle_renderer.hpp
old_changed/: GUIShaderEdit - Copy.cpp  GUIShaderEdit_10162023.cpp  GUIShaderEdit_11192023.cpp
pets/: animal.h  cat.hpp  dog.hpp  pets.hpp
src/: main.cpp  triangle_renderer.cpp
